--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
     "d3": "^4.7.4",
+    "express": "^4.15.3",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
